# shibumi

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
.github/workflows/: build.yml
include/: common.h  core.h  disasm.h  gui.h  utils.h
include/core/: cpu.h  mem.h  mmio.h
include/core/cpu/: instructions.h  registers.h
include/core/cpu/instruction/: decode_instr.h
include/core/cpu/registers/: cop0.h  cop1.h
include/core/mem/: tlb.h
include/core/mem/mmio/: intr.h  mi.h  pi.h  ri.h  si.h  vi.h
include/core/mmio/: pi.h
include/utils/: bit.h  log.h  swap.h
src/: CMakeLists.txt  context.c  context.cpp  context.h  context.hpp  core.c  disasm.c  emu.c  emu.h  gui.c  gui.cpp  main.c  main.cpp
src/core/: cpu.c  mem.c  mmio.c
src/core/cpu/: instructions.c  registers.c
src/core/cpu/instruction/: decode_instr.c
src/core/mem/: tlb.c
src/core/mem/mmio/: intr.c  mi.c  pi.c  ri.c  si.c  vi.c
src/core/mmio/: mi.c  pi.c
src/frontend/: CMakeLists.txt  context.cpp  context.hpp  disasm.cpp  disasm.hpp  disassembler.cpp  disassembler.hpp  frontend.cpp  frontend.hpp  util.cpp  util.hpp
src/frontend/include/: gui.h  gui.hpp
src/frontend/include/gui/: disasm.hpp  opengl_context.hpp
src/frontend/src/: gui.cpp
src/frontend/src/gui/: disasm.cpp  logger.cpp  opengl_context.cpp
src/shibumi/: CMakeLists.txt
src/shibumi/include/: common.h  core.h  utils.h
src/shibumi/include/core/: audio.h  cpu.h  mem.h  mmio.h  rsp.h
src/shibumi/include/core/cpu/: cop0_instructions.h  fpu_instructions.h  instructions.h  registers.h  rsp_instructions.h
src/shibumi/include/core/cpu/instruction/: cop0_decode_instr.h  decode_instr.h  fpu_decode_instr.h  rsp_decode_instr.h
src/shibumi/include/core/cpu/registers/: cop0.h  cop1.h
src/shibumi/include/core/mem/mmio/: ai.h  intr.h  mi.h  pi.h  pif.h  ri.h  si.h  sp.h  vi.h
src/shibumi/include/core/rsp/: sp_status.h
src/shibumi/include/utils/: access.h  bit.h  log.h  swap.h
src/shibumi/src/: core.c
src/shibumi/src/core/: audio.c  cpu.c  mem.c  mmio.c  rsp.c
src/shibumi/src/core/cpu/: cop0_instructions.c  fpu_instructions.c  instructions.c  registers.c  rsp_instructions.c
src/shibumi/src/core/cpu/instruction/: cop0_decode_instr.c  decode_instr.c  fpu_decode_instr.c  rsp_decode_instr.c
src/shibumi/src/core/cpu/registers/: cop0.c
src/shibumi/src/core/mem/: CMakeLists.txt  tlb.c
src/shibumi/src/core/mem/mmio/: ai.c  intr.c  mi.c  pi.c  pif.c  ri.c  si.c  vi.c
src/shibumi/src/utils/: bit.c
src/utils/: access.c  bit.c  log.c  swap.c
tests/: n64-systemtest-simple.n64
